@startuml ej1
skinparam ClassBackgroundColor transparent
skinparam NoteBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam NoteBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false

class ToDoItem{
    -name: String
    -inicio: LocalDate
    -fin: LocalDate
    -comments: List<String>

    +<<create>> ToDoItem(name: String)
    +start()
    +togglePause()
    +finish()
    +workedTime(): Duration
    +addComment(comment: String)
}

interface Estado{
    +start(ToDoItem i)
    +togglePause(ToDoItem item)
    +finish(ToDoItem item)
    +compareName(String name): boolean
}
Estado -l-o ToDoItem

class InProgress{}

class Paused{}

class Pending{}

class Finished{}

Estado <|.. Finished
Estado <|.. InProgress
Estado <|.. Paused
Estado <|.. Pending

@enduml